test/compile_fail/multiple_throw_policies.cpp
// Licensed under the MIT License <http://opensource.org/licenses/MIT>.
// SPDX-License-Identifier: MIT

#define SCOPE_GUARD_MAY_THROW_ACTION
#define SCOPE_GUARD_NO_THROW_ACTION
#include <scope_guard.hpp>

int main() {
  return 0;
}
